{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 284,
  "lineage": "990505c8-843f-dca1-48e5-93c5c4364cf6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:266735807609:subnet/subnet-050bae3e0148607bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "172.16.21.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Icomm-ClassicTU-vpc-subnet-private1-ap-south-1a",
                  "Icomm-ClassicTU-vpc-subnet-private2-ap-south-1b"
                ]
              }
            ],
            "id": "subnet-050bae3e0148607bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735807609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Icomm-ClassicTU-vpc-subnet-private1-ap-south-1a",
              "VPC Createddate": "25-Nov-2024",
              "VPC Name": "Icomm-ClassicTU-vpc"
            },
            "vpc_id": "vpc-0bf4a3baed258e308"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:266735807609:subnet/subnet-016ba99401669b889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "172.16.22.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Icomm-ClassicTU-vpc-subnet-private1-ap-south-1a",
                  "Icomm-ClassicTU-vpc-subnet-private2-ap-south-1b"
                ]
              }
            ],
            "id": "subnet-016ba99401669b889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "266735807609",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Icomm-ClassicTU-vpc-subnet-private2-ap-south-1b",
              "VPC Createddate": "25-Nov-2024",
              "VPC Name": "Icomm-ClassicTU-vpc"
            },
            "vpc_id": "vpc-0bf4a3baed258e308"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:266735807609:vpc/vpc-0bf4a3baed258e308",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bbe682601009f2ea",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-062cd21a2ff98dd58",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "classic-tech-upgrade-vpc"
                ]
              }
            ],
            "id": "vpc-0bf4a3baed258e308",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a6bc89db1bb09a48",
            "owner_id": "266735807609",
            "tags": {
              "Name": "classic-tech-upgrade-vpc",
              "VPC Createddate": "25-Nov-2024",
              "VPC Name": "Icomm-ClassicTU-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:266735807609:security-group/sg-0e8d6deefdc20290d",
            "description": "dev-ecs-cluster-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8d6deefdc20290d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ae100ace7f1baf0"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "dev-ecs-cluster-sg",
            "name_prefix": "",
            "owner_id": "266735807609",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ecs-cluster-sg"
            },
            "tags_all": {
              "Name": "dev-ecs-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf4a3baed258e308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecs_cluster_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-217347472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e8d6deefdc20290d",
            "security_group_rule_id": "sgr-03b9a5d3ffe66059f",
            "self": false,
            "source_security_group_id": "sg-0e8d6deefdc20290d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:266735807609:security-group-rule/sgr-01a4514b929424e14",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01a4514b929424e14",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e8d6deefdc20290d",
            "security_group_rule_id": "sgr-01a4514b929424e14",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:266735807609:security-group-rule/sgr-0f057ecb029c2b4d5",
            "cidr_ipv4": "172.16.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f057ecb029c2b4d5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e8d6deefdc20290d",
            "security_group_rule_id": "sgr-0f057ecb029c2b4d5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    }
  ]
}